template_service-with-ingress.yaml
# 1) buat service dulu, disini hanya buat ingress untuk service liat implementasinya
# 2) baru buat ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-name
  labels:
    label-key1: label-value1
spec:
# buat aturan untuk ingress, bisa lbh dari 1
  rules:
    - host: sub.domain.com
      http:
        paths:
          - path: /
          # path / akan nembak ke backend brkt (service-name)
            backend:
              serviceName: service-name
              servicePort: 80
    - host: sub2.domain.com
      http:
        paths:
          - path: /service2
            backend:
              serviceName: service2
              servicePort: 8080
          - path: /service3
            backend:
              serviceName: service3
              servicePort: 8080
